# uniq_tool

./: README.md  pyproject.toml
src/uniq_tool/: main.py
tests/: test_main.py
